kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doen
  namespace: doen
  labels:
    app: doen
spec:
  type: ClusterIP
  selector:
    app: doen
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
